奥迪优化四

--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -79,9 +79,9 @@
     <div class="page0-03">
       <img src="./images/carframe2.png" />
     </div>
-    <div class="page0-04">
+    <!-- <div class="page0-04">
       <img src="./images/citylight.png" />
-    </div>
+    </div> -->
     <div class="page0-06">
       <img src="./images/light1.png" />
     </div>
@@ -96,6 +96,9 @@
       <img src="./images/02_bg.jpg" />
     </div>
     <div class="page1-002"></div>
+    <div class="page1-004">
+      <img src="./images/light1_01.png" />
+    </div>
     <div class="page1-04">
       <img src="./images/01_car.png" />
       <img src="./images/wheel.png" class="wheel wheel1 rotating" />
@@ -174,7 +177,8 @@
       <img src="./images/07_bg_1.jpg" />
     </div>
     <div class="page4-02">
-      <img src="./images/07_car.png" />
+      <img src="./images/07_car_running.png" />
+      <img src="./images/07_car.png" class="car" />
     </div>
     <div class="page4-03">
       <img src="./images/07_text1.png" />
