--- a/src/wangfuji/buy.html
+++ b/src/wangfuji/buy.html
@@ -53,7 +53,9 @@
               <div class="commodity-box">
                 <div class="commodity">
                   <div class="photo">
-                    <img src="./images/bottle2.png" />
+                    <div class="photo-wrap">
+                      <img src="./images/person.png" />
+                    </div>
                   </div>
                   <div class="describe">王福记猪肉脯（酥香）
                     <span>￥
@@ -67,7 +69,9 @@
               <div class="commodity-box">
                 <div class="commodity">
                   <div class="photo">
-                    <img src="./images/bottle2.png" />
+                    <div class="photo-wrap">
+                      <img src="./images/photo1.png" />
+                    </div>
                   </div>
                   <div class="describe">王福记猪肉脯（酥香）111
                     <span>￥
@@ -81,7 +85,9 @@
               <div class="commodity-box">
                 <div class="commodity">
                   <div class="photo">
-                    <img src="./images/bottle2.png" />
+                    <div class="photo-wrap">
+                      <img src="./images/photo2.png" />
+                    </div>
                   </div>
                   <div class="describe">王福记猪肉脯（酥香）222
                     <span>￥
