--- a/src/wangfuji/cart.html
+++ b/src/wangfuji/cart.html
@@ -51,7 +51,7 @@
           <div class="name">数量</div>
         </div>
         <ul class="goodlist">
-          <li class="list">
+          <!-- <li class="list">
             <div class="left">
               <label class="check">
                 <input type="checkbox" class="checkbox" />
@@ -122,7 +122,7 @@
             <div class="del">
               <img src="./images/del.png" />
             </div>
-          </li>
+          </li> -->
         </ul>
         <div class="checkAll list">
           <div class="left">
@@ -148,29 +148,53 @@
           <div class="title">核心产品推荐</div>
           <ul class="product">
             <li class="item">
-              <img src="./images/product-item1.png" class="pic" />
+              <div class="item-wrap">
+                <img src="./images/product-item1.png" class="pic" />
+              </div>
               <p class="name">王福记秘制黑猪肉脯
                 <span class="price">￥80.00</span>
               </p>
             </li>
             <li class="item">
-              <img src="./images/product-item2.png" class="pic" />
+              <div class="item-wrap">
+                <div class="pic-wrap">
+                  <img src="./images/product-item1.png" class="pic" />
+                </div>
+              </div>
               <p class="name">王福记黑猪肉脯（原味）（香辣）
                 <span class="price">￥80.00</span>
               </p>
             </li>
             <li class="item">
-              <img src="./images/product-item3.png" class="pic" />
+              <div class="item-wrap">
+                <div class="pic-wrap">
+                  <img src="./images/product-item2.png" class="pic" />
+                </div>
+              </div>
               <p class="name">王福记桐香猪肉脯
                 <span class="price">￥80.00</span>
               </p>
             </li>
             <li class="item">
-              <img src="./images/product-item4.png" class="pic" />
+              <div class="item-wrap">
+                <div class="pic-wrap">
+                  <img src="./images/product-item3.png" class="pic" />
+                </div>
+              </div>
               <p class="name">猪肉纸卷【薄如蝉翼，脆香可口】
                 <span class="price">￥80.00</span>
               </p>
             </li>
+            <!-- <li class="item">
+              <div class="item-wrap">
+                <div class="pic-wrap">
+                  <img src="./images/product-item4.png" class="pic" />
+                </div>
+              </div>
+              <p class="name">猪肉纸卷【薄如蝉翼，脆香可口】
+                <span class="price">￥80.00</span>
+              </p>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -257,7 +281,7 @@
           window.location.href = "pay.html";
         });
         // 删除商品
-        $(".goodlist").on("click",".del",function(){
+        $(".goodlist").on("click", ".del", function () {
           $(this).closest(".list").remove();
         });
       });
