--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -71,47 +71,47 @@
   <!-- page0 -->
   <div class="page page0">
     <div class="page0-01">
-      <img src="./images/bg.jpg" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/bg.jpg" />
     </div>
     <div class="page0-02">
-      <img src="./images/carframe1.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/carframe1.png" />
     </div>
     <div class="page0-03">
-      <img src="./images/carframe2.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/carframe2.png" />
     </div>
     <!-- <div class="page0-04">
-      <img src="./images/citylight.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/citylight.png" />
     </div> -->
     <div class="page0-06">
-      <img src="./images/light1.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/light1.png" />
     </div>
     <div class="page0-07">
-      <img src="./images/text.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/text.png" />
     </div>
   </div>
   <!-- page1 -->
   <div class="page page1">
     <!-- <div class="page1-00"></div> -->
     <div class="page1-001">
-      <img src="./images/02_bg.jpg" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/02_bg.jpg" />
     </div>
     <div class="page1-002"></div>
     <div class="page1-004">
-      <img src="./images/light1_01.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/light1_01.png" />
     </div>
     <div class="page1-04">
-      <img src="./images/01_car.png" />
-      <img src="./images/wheel.png" class="wheel wheel1 rotating" />
-      <img src="./images/wheel.png" class="wheel wheel2 rotating" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/01_car.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/wheel.png" class="wheel wheel1 rotating" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/wheel.png" class="wheel wheel2 rotating" />
       <div class="page1-02">
-        <img src="./images/carlight.png" />
+        <img src="http://p28cve2yr.bkt.clouddn.com/carlight.png" />
       </div>
     </div>
     <div class="page1-03">
-      <img src="./images/circle.png" class="circle" />
-      <img src="./images/wave1.png" class="wave1 active" />
-      <img src="./images/wave2.png" class="wave2 active" />
-      <img src="./images/wave3.png" class="wave3 active" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/circle.png" class="circle" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/wave1.png" class="wave1 active" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/wave2.png" class="wave2 active" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/wave3.png" class="wave3 active" />
     </div>
     <div class="page1-05">
       <p>
@@ -144,50 +144,50 @@
       </p>
     </div>
     <div class="page1-06">
-      <img src="./images/02_text.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/02_text.png" />
     </div>
   </div>
   <!-- page2 -->
   <div class="page page2">
     <!-- <div class="page2-01"></div> -->
     <div class="page2-001">
-      <img src="./images/04_bg.jpg" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/04_bg.jpg" />
     </div>
     <div class="page2-002"></div>
     <div class="page2-02">
-      <img src="./images/04_text.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/04_text.png" />
     </div>
   </div>
   <!-- page3 -->
   <div class="page page3">
     <div class="page3-01">
-      <img src="./images/06_bg.jpg" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/06_bg.jpg" />
       <div class="page3-02">
-        <img src="./images/06_car.png" />
-        <img src="./images/page3-03.png" class="page3-03" />
+        <img src="http://p28cve2yr.bkt.clouddn.com/06_car.png" />
+        <img src="http://p28cve2yr.bkt.clouddn.com/page3-03.png" class="page3-03" />
       </div>
     </div>
     <div class="page3-04">
-      <img src="./images/06_text.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/06_text.png" />
     </div>
   </div>
   <!-- page4 -->
   <div class="page page4">
     <div class="page4-01">
-      <img src="./images/07_bg_1.jpg" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/07_bg_1.jpg" />
     </div>
     <div class="page4-02">
-      <img src="./images/07_car_running.png" />
-      <img src="./images/07_car.png" class="car" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/07_car_running.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/07_car.png" class="car" />
     </div>
     <div class="page4-03">
-      <img src="./images/07_text1.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/07_text1.png" />
     </div>
     <div class="page4-04">
-      <img src="./images/07_text2.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/07_text2.png" />
     </div>
     <div class="page4-05">
-      <img src="./images/page05-01.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/page05-01.png" />
     </div>
     <div class="page4-06"></div>
     <div class="page4-07">
@@ -212,10 +212,10 @@
   <!-- page5 -->
   <!-- <div class="page page5">
     <div class="page5-01">
-      <img src="./images/08_bg.jpg" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/08_bg.jpg" />
     </div>
     <div class="page5-02">
-      <img src="./images/page05-01.png" />
+      <img src="http://p28cve2yr.bkt.clouddn.com/page05-01.png" />
     </div>
     <div class="page5-03"></div>
     <div class="page5-04">
