--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -93,7 +93,10 @@
   <div class="page page1">
     <!-- <div class="page1-00"></div> -->
     <div class="page1-001">
-      <img src="http://p28cve2yr.bkt.clouddn.com/02_bg.jpg" />
+      <!-- <img src="http://p28cve2yr.bkt.clouddn.com/02_bg.jpg" /> -->
+      <!-- <img src="./images/02bg.jpg" /> -->
+      <!-- <img src="./images/02.png" /> -->
+      <img src="http://p28cve2yr.bkt.clouddn.com/02.png" />
     </div>
     <div class="page1-002"></div>
     <div class="page1-004">
@@ -238,8 +241,9 @@
     </div>
   </div> -->
   <script src="./js/jquery-1.11.0.min.js"></script>
-  <script src="./js/preloadjs-0.6.2.min.js"></script>
-  <script src="./js/soundjs-0.6.2.min.js"></script>
+  <!-- <script src="./js/preloadjs-0.6.2.min.js"></script>
+  <script src="./js/soundjs-0.6.2.min.js"></script> -->
+  <script src="./js/preloadjs.js"></script>
   <script src="./js/TweenMax.min.js"></script>
   <script src="./js/index.js"></script>
 </body>
