--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -245,7 +245,7 @@
   <script src="./js/soundjs-0.6.2.min.js"></script> -->
   <script src="./js/preloadjs.js"></script>
   <script src="./js/TweenMax.min.js"></script>
-  <script src="./js/vconsole.min.js"></script>
+  <!-- <script src="./js/vconsole.min.js"></script> -->
   <script src="./js/index.js"></script>
 </body>
 
