--- a/src/wangfuji/pay.html
+++ b/src/wangfuji/pay.html
@@ -47,7 +47,7 @@
     <!-- pay -->
     <div class="page">
       <div class="wrap">
-        <div class="pay">
+        <div class="pay active">
           <div class="head-title">王福记猪肉脯</div>
           <div class="message">产品信息：</div>
           <div class="describe">
@@ -60,11 +60,12 @@
             <input type="text" placeholder="请输入订购数量" />
             <div class="tag">订购数</div>
           </div>
-          <div class="input-box">
+          <div class="input-box input-box1">
             <input type="text" class="address" id="address1" placeholder="选择地址" />
             <!-- <div id="address"></div> -->
             <div class="tag">配送至</div>
             <div class="polygon"></div>
+            <div class="add">新增</div>
           </div>
           <div class="btns">
             <div class="btn">
@@ -75,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="pay active">
+        <div class="pay">
           <div class="head-title">王福记猪肉脯</div>
           <div class="message">产品信息：</div>
           <div class="describe">
