增加分享文字

--- a/src/wangfuji/ranklist.html
+++ b/src/wangfuji/ranklist.html
@@ -162,7 +162,15 @@
       <!-- share -->
       <div class="pageShare">
         <img src="./images/hand.png" class="hand" />
-        <p>点击微信右上角可分享给好友及朋友圈</p>
+        <p class="word">点击微信右上角可分享给好友及朋友圈</p>
+        <div class="award">
+          <p>您将有机会登上王福记瓶身、销往全中国</p>
+          <p>奖励设置：（根据点赞数排名）</p>
+          <p>第一名：<span>iPhone X</span>一部，并成为王福记代言人</p>
+          <p>第二名：<span>王福记价值3888元</span>全年定制大礼包一份</p>
+          <p>第三名：<span>价值3888元王福记大礼包</span>一份</p>
+          <p class="word1">前10名参赛者，可获得<span>王福记3张定制礼盒兑换券</span>！</p>
+        </div>
       </div>
       <!-- mask -->
       <div class="pageMask">
