--- a/src/wangfuji/ranklist.html
+++ b/src/wangfuji/ranklist.html
@@ -62,6 +62,7 @@
             <div class="bottles">
               <div class="photo">
                 <img src="./images/bottle4.png" />
+                <div class="rankBg">1</div>
               </div>
               <div class="like">
                 <!-- <img src="./images/like.png" /> -->
@@ -75,6 +76,7 @@
             <div class="bottles">
               <div class="photo">
                 <img src="./images/bottle4.png" />
+                <div class="rankBg">2</div>
               </div>
               <div class="like active">
                 <!-- <img src="./images/like.png" /> -->
@@ -88,6 +90,7 @@
             <div class="bottles">
               <div class="photo">
                 <img src="./images/bottle4.png" />
+                <div class="rankBg">3</div>
               </div>
               <div class="like">
                 <!-- <img src="./images/like.png" /> -->
@@ -101,6 +104,7 @@
             <div class="bottles">
               <div class="photo">
                 <img src="./images/bottle4.png" />
+                <div class="rankBg">4</div>
               </div>
               <div class="like">
                 <!-- <img src="./images/like.png" /> -->
@@ -114,6 +118,7 @@
             <div class="bottles">
               <div class="photo">
                 <img src="./images/bottle4.png" />
+                <div class="rankBg">5</div>
               </div>
               <div class="like">
                 <!-- <img src="./images/like.png" /> -->
@@ -127,6 +132,7 @@
             <div class="bottles">
               <div class="photo">
                 <img src="./images/bottle4.png" />
+                <div class="rankBg">6</div>
               </div>
               <div class="like">
                 <!-- <img src="./images/like.png" /> -->
@@ -140,6 +146,7 @@
             <div class="bottles">
               <div class="photo">
                 <img src="./images/bottle4.png" />
+                <div class="rankBg">7</div>
               </div>
               <div class="like">
                 <!-- <img src="./images/like.png" /> -->
